<?xml version="1.0"?>
<package>

  <name>mbot_mocap</name>
  <version>1.0.0</version>
  <description>
      Launch files for motion capture system.
  </description>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>vrpn_client_ros</run_depend>

</package>
